--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,10 @@
 
+body{
+    display: flex;
+    align-items: center; 
+    height: 100vh;
+
+}
 .btn:not(:disabled):not(.disabled) {
     cursor: pointer;
 }
@@ -18,8 +24,9 @@
 .btn {
     width: 100%;
     /* height: 100vh;*/
+    height: 45px;
     display: inline-block;
-    font-weight: 400;
+    font-weight: 500;
     text-align: center;
     white-space: nowrap;
     vertical-align: middle;
@@ -29,7 +36,7 @@
     user-select: none;
     border: 1px solid transparent;
     padding: 0.375rem 0.75rem;
-    font-size: 1rem;
+    font-size: 1.05rem;
     line-height: 1.5;
     border-radius: 0.25rem;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
