--- a/src/main.css
+++ b/src/main.css
@@ -3,41 +3,20 @@ body{
     display: flex;
     align-items: center; 
     height: 100vh;
+    flex-direction: column;
+    justify-content: space-around;
 
 }
-.btn:not(:disabled):not(.disabled) {
-    cursor: pointer;
+
+.input-group{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
 }
-[type=reset], [type=submit], button, html [type=button] {
-    -webkit-appearance: button;
-}
-.btn-success {
-    color: #fff;
-    background-color: #28a745;
-    border-color: #28a745;
-}
-.btn-primary {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
-}
-.btn {
+#btn-prom{
     width: 100%;
-    /* height: 100vh;*/
-    height: 45px;
-    display: inline-block;
-    font-weight: 500;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1.05rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+#name-input{
+    width: 100%;
 }
