--- a/src/table_promotion/table_promotion.css
+++ b/src/table_promotion/table_promotion.css
@@ -1,10 +1,6 @@
 
 body{
-    display: flex;
-    align-items: center; 
-    height: 100vh;
-    flex-direction: column;
-    justify-content: space-around;
+    height: 100%;
 
 }
 .hidden{
