--- a/src/main.css
+++ b/src/main.css
@@ -12,7 +12,7 @@ body{
 }
 
 .hidden{
-    display: none;
+    display: none !important;
 }
 
 .input-group{
@@ -30,3 +30,30 @@ body{
 h5{
     font-weight: 600;
 }
+@keyframes spinner {
+    0% {
+      transform: translate3d(-50%, -50%, 0) rotate(0deg);
+    }
+    100% {
+      transform: translate3d(-50%, -50%, 0) rotate(360deg);
+    }
+  }
+  .spin::before {
+    animation: 1.5s linear infinite spinner;
+    animation-play-state: inherit;
+    border: solid 5px #cfd0d1;
+    border-bottom-color: #838280;
+    border-radius: 50%;
+    content: "";
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    margin-top: 10px;
+    transform: translate3d(-50%, -50%, 0);
+    will-change: transform;
+    margin-left: 20px;
+  }
+  #loading{
+    display: flex;
+    justify-content: center;
+  }
